# StrixBench

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: models.example.toml  strix-halo.toml
docs/: learning-ladder.md
strixbench/: __init__.py  cli.py  power.py  report.py  schema.py  sysinfo.py  util.py
strixbench/runners/: __init__.py  llamacpp.py  ollama.py
